# SOL

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  format.sh  requirements.txt  setup.py
cmake/: FindNumPy.cmake  compiler.cmake  external.cmake  lsol.cmake  pario.cmake  sol.cmake  summary.cmake  test.cmake  tools.cmake  util.cmake
data/: a1a.t  a1a.tmp  mnist.scale.res  pcmac.res
examples/python/: writer_data.py
experiments/: README.md  a1a.py  exp_rcv1.py  experiment.py  fgm.py  fig.py  fs.py  liblinear.py  mnist.py  mrmr.py  rcv1.py  rcv1_ol.res  rcv1_sol.res  url.py  voc2007.py  vw.py  webspam.py
experiments/opts/: a1a.py  a1a2.py  aut.py  basehock.py  ccat.py  mnist.py  news.py  pcmac.py  rcv1.py  real-sim.py  relathe.py  synthetic_100k.py  synthetic_1m.py  synthetic_200k.py  url.py  webspam.py
include/lsol/: c_api.h  lsol.h  tools.h
include/sol/: c_api.h  sol.h  tools.h
ofs/: README.md  liblinear.py
ofs/opts/: aut.py  rcv1.py  relathe.py  synthetic_1m.py  url.py  (+2 more)
python/: CV.py  __init__.py  cv.py  dataset.py  defaults.cfg  defaults.cfg.example  exp_rcv1.py  libsol_core.py  libsol_test.py  libsol_train.py  lsol.pxd  lsol.py  lsol.pyx  lsol_core.py  lsol_test.py  lsol_train.py  pylsol.py  pysol.pxd  pysol.pyx  search_space.py  setup.py  sol_test.py  sol_train.py
src/: tools.cc
test/: test_binary.cc  test_compress.cc  test_csv.cc  test_data_io.h  test_data_iter.cc  test_data_point.cc  test_file_reader.cc  test_file_writer.cc  test_svm.cc
tools/: analyze.cc  concat.cc  converter.cc  libsol_c.cc  libsol_test.cc  libsol_train.cc  lsol.cc  lsol_c.cc  lsol_test.cc  lsol_train.cc  shuffle.cc  sol_test.cc  sol_train.cc  split.cc
(+235 files in other folders)
